# cmake-qtqml-plugin-example

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
plugins/: CMakeLists.txt
plugins/testplugin/: CMakeLists.txt  testplugin.cpp  testplugin.h  testplugininterface.h
qml/: CMakeLists.txt
qml/my/plugin/example/: CMakeLists.txt  myplugin.cpp  plugin_common.qrc
qml/my/plugin/example/ios/: MyQml.qml  plugin.qrc
qml/my/plugin/example/win/: MyQml.qml
src/: CMakeLists.txt  libxml2_test_tree2.c  main.cpp
src/qml/: main.qml
